kubernetes/base/portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  labels:
    app: portainer
spec:
  ports:
  - port: 9000
    targetPort: 9000
    nodePort: 30777  # Different from pgadmin's 30080
  selector:
    app: portainer
  type: NodePort
